--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,5 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = ["@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/"]
+ffi = true # CAUTION: allows foundry to run bash scripts directly, turn off if not needed
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
